test/scc/pp/errors/059.a
059.t:1:9: error: unknown #pragma directive